@@ -1,5 +1,6 @@
 <body>
-<p>The JCReport performs the following steps:
+
+The JCReport performs the following steps:
 
 <ol>
 <li>Running tools on the source or class files.</li>
@@ -7,5 +8,4 @@
 reports than tools supported, e.g. JCoverage, which is not run explicitly.</li>
 <li>Converting the report into a HTML representation.</li>
 </ol>
-</p>
 </body>
