@@ -21,9 +21,11 @@ Fawkez 1.2 'Charlie X'
     length and value range validations.
   * Generated StrongTypes (immutable ones) do implement a
     common interface (StrongType).
+  * The jcreport can now read emma 'es' files to as coverage
+    info. http://emma.sourceforge.net/
 
 Fawkez 1.1 'The Man Trap' (March 31, 2007)
-https://www.jcoderz.org/fawkez/browser/tags/FAWKEZ_1_1_0
+http://www.jcoderz.org/fawkez/browser/tags/FAWKEZ_1_1_0
 
   * New features: #34
   * Added new severity levels as proposed in #16
@@ -32,4 +34,4 @@ https://www.jcoderz.org/fawkez/browser/tags/FAWKEZ_1_1_0
   * added up-to-date check for retrieve-3rd-party-libs target
 
 Fawkez 1.0 'going public' (November 26, 2006)
-https://www.jcoderz.org/fawkez/browser/tags/FAWKEZ_1_0_0
+http://www.jcoderz.org/fawkez/browser/tags/FAWKEZ_1_0_0
